[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "node"
version = "1.2.3.dev0"
description = "Building data structures as node trees"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Node Contributors", email = "dev@conestack.org"}]
keywords = ["node", "tree", "fullmapping", "dict"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "odict>=1.9.0",
    "plumber>=1.5",
    "zope.component",
    "zope.deferredimport",
    "zope.deprecation",
    "zope.lifecycleevent",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "http://github.com/conestack/node"

[tool.zest-releaser]
create-wheel = true
